force-app/main/default/objects/Product2/fields/Add_ons__c.field-meta.xml
<CustomField>
    <fullName>Add_ons__c</fullName>
    <label>Add-ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autopilot</fullName>
            </value>
            <value>
                <fullName>Streaming Services</fullName>
            </value>
            <value>
                <fullName>OTA Updates</fullName>
            </value>
            <value>
                <fullName>Advance Parking Sensors</fullName>
            </value>
            <value>
                <fullName>Automatic Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>