force-app/main/default/objects/Product2/fields/Custom_Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Custom_Exterior_Color__c</fullName>
    <label>Custom Exterior Color</label>
    <length>16</length>
    <type>Text</type>
</CustomField>