force-app/main/default/objects/Product2/fields/Custom_Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Custom_Interior_Color__c</fullName>
    <label>Custom Interior Color</label>
    <length>16</length>
    <type>Text</type>
</CustomField>