force-app/main/default/objects/Product2/fields/Customer_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The vehicle is owned by a customer.</inlineHelpText>
    <label>Customer Vehicle</label>
    <type>Checkbox</type>
</CustomField>