force-app/main/default/objects/Product2/fields/Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Interior_Color__c</fullName>
    <label>Interior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interior_Colors</valueSetName>
    </valueSet>
</CustomField>