force-app/main/default/objects/Product2/fields/Range_EPA_miles__c.field-meta.xml
<CustomField>
    <fullName>Range_EPA_miles__c</fullName>
    <label>Range (EPA, miles)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>