force-app/main/default/objects/Product2/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State_Inspection</fullName>
                <label>State Inspection</label>
            </value>
            <value>
                <fullName>Battery Test</fullName>
            </value>
            <value>
                <fullName>Air_Filter_Replacement</fullName>
                <label>Air Filter Replacement</label>
            </value>
            <value>
                <fullName>Tire_Rotation_and_Balance</fullName>
                <label>Tire Rotation and Balance</label>
            </value>
            <value>
                <fullName>Performance Level 1</fullName>
            </value>
            <value>
                <fullName>Performance Level 2</fullName>
            </value>
            <value>
                <fullName>Performance Level 3</fullName>
            </value>
            <value>
                <fullName>Brake Fluid Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>