force-app/main/default/objects/Product2/fields/X0_60_Time_s__c.field-meta.xml
<CustomField>
    <fullName>X0_60_Time_s__c</fullName>
    <label>0-60 Time (s)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>