force-app/main/default/objects/Product2/recordTypes/Add_on.recordType-meta.xml
<RecordType>
    <fullName>Add_on</fullName>
    <active>true</active>
    <label>Add-on</label>
</RecordType>