force-app/main/default/objects/Product2/recordTypes/Car_Service.recordType-meta.xml
<RecordType>
    <fullName>Car_Service</fullName>
    <active>true</active>
    <label>Car Service</label>
</RecordType>