force-app/main/default/objects/Product2/listViews/All_Car_Services.listView-meta.xml
<ListView>
    <fullName>All_Car_Services</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>Service_Type__c</columns>
    <columns>Add_ons__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Add_on,Product2.Car_Service</value>
    </filters>
    <label>All Services and Add-ons</label>
</ListView>